--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-DATABASE_URL=mysql://root:dDiAHyMsEyhEyzTwUcsXtuuOAiSUMVuK@mainline.proxy.rlwy.net:41049/railway
+SESSION_SECRET = chatapp_secret
+DB_HOST=mysql.railway.internal
+DB_USER=root
+DB_PASS=dDiAHyMsEyhEyzTwUcsXtuuOAiSUMVuK
+DB_NAME=railway
+DB_PORT=3306
