--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SESSION_SECRET = chatapp_secret
-DB_HOST=mysql.railway.internal
-DB_USER=root
-DB_PASS=dDiAHyMsEyhEyzTwUcsXtuuOAiSUMVuK
-DB_NAME=railway
+DB_HOST=06cxd.h.filess.io
+DB_USER=JMJ_thesejack
+DB_PASS=51a596ef599afc0fd900c696d54f7777773e855c
+DB_NAME=JMJ_thesejack
 DB_PORT=3306
