--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
+    "crypto": "^1.0.1",
     "express": "^4.21.2",
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
+    "nodemailer": "^6.10.0",
     "socket.io": "^4.8.1"
   }
 }
